--- a/測試2.html
+++ b/測試2.html
@@ -1,11 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <p>測試2</p>
+
+
+    <h1>主標題</h1>
+    <p>不敢日本台鐵是以民國最快離線之下我還不承擔顧問一路請問物業，出生哥哥購物高中森林臨時舉辦先生反對是因為多麼，推坑王主動數碼相機呵呵事業自信治理政府獲得儘量經銷商版面，包裝你說具有手術轉身很多人事件防治天天，吸引微笑迅速舉報關閉學會區別來看，破解最近抓住語。
+    </p>
+
+    <ol>
+        <li>123</li>
+        <li>123</li>
+        <li>123</li>
+    </ol>
+
+
+    <table border="3" width="600">
+        <caption></caption>
+        <!-- 表格頭部區 -->
+        <thead>
+            <tr>
+                <th scope="col">姓名</th>
+                <th scope="col">國文</th>
+                <th scope="col">英文</th>
+            </tr>
+        </thead>
+        <!-- 表格資料區 -->
+        <tbody>
+            <tr>
+                <th scope="row">小明</th>
+                <td>text</td>
+                <td>text</td>
+            </tr>
+            <tr>
+                <th scope="row">小華</th>
+                <td>text</td>
+                <td>text</td>
+            </tr>
+            <tr>
+                <th scope="row">小美</th>
+                <td>text</td>
+                <td>text</td>
+            </tr>
+        </tbody>
+        <!-- 表格註解區 -->
+        <tfoot>
+            <tr>
+                <th scope="row">備註</th><!-- colspan跨欄 -->
+                <th colspan="2">text</th>
+                <!-- <td>text</td> -->
+            </tr>
+        </tfoot>
+
+    </table>
+
+
+    <table border="3" width="500">
+        <tr>
+            <td rowspan="2">text</td>
+            <td>text</td>
+            <td>text</td>
+            <td>text</td>
+            <td>text</td>
+            <td>text</td>
+        </tr>
+        <tr>
+            <td>text</td>
+            <!-- <td>text</td> -->
+            <td rowspan="2">text</td>
+            <td>text</td>
+            <td>text</td>
+            <td>text</td>
+        </tr>
+        <tr>
+            <!-- <td>text</td> -->
+            <td>text</td>
+            <td>text</td>
+            <td>text</td>
+            <td>text</td>
+            <td>text</td>
+        </tr>
+        <tr>
+            <td>text</td>
+            <td>text</td>
+            <td>text</td>
+            <td>text</td>
+            <td>text</td>
+            <td>text</td>
+        </tr>
+        <tr>
+            <td>text</td>
+            <td>text</td>
+            <td>text</td>
+            <td>text</td>
+            <td>text</td>
+            <td>text</td>
+        </tr>
+    </table>
+
+
+
 </body>
+
 </html>
