--- a/Taiwan_Address/Taiwan_Address.html
+++ b/Taiwan_Address/Taiwan_Address.html
@@ -102,7 +102,7 @@
 
         $.ajax({
             type: "Get",
-            url: "http://127.0.0.1:5500/Taiwan_Address/AllData.json",
+            url: "AllData.json",
             success: function (response) {
                 var table = document.getElementById('templateTitle');
                 DDD = response;
