--- a/Taiwan_Address/Taiwan_Address.html
+++ b/Taiwan_Address/Taiwan_Address.html
@@ -102,7 +102,7 @@
 
         $.ajax({
             type: "Get",
-            url: "AllData.json",
+            url: "https://raw.githubusercontent.com/Yumeno198271/B10510047/master/Taiwan_Address/AllData.json",
             success: function (response) {
                 var table = document.getElementById('templateTitle');
                 DDD = response;
