--- a/Taiwan_Address/Taiwan_Address.html
+++ b/Taiwan_Address/Taiwan_Address.html
@@ -12,7 +12,7 @@
     <title>Hello, world!</title>
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-
+    <script src="AllData.json"></script>
     <script src="MyHelper.js"></script>
     <style>
         table {
