--- a/Taiwan_Address/Taiwan_Address2.html
+++ b/Taiwan_Address/Taiwan_Address2.html
@@ -12,7 +12,7 @@
     <title>Hello, world!</title>
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-    <script src="AllData.json"></script>
+    <script src="https://raw.githubusercontent.com/Yumeno198271/B10510047/master/Taiwan_Address/AllData.json"></script>
     <script src="MyHelper.js"></script>
     <style>
         table {
